crates/sparrow-logical/src/snapshots/sparrow_logical__expr__tests__literal.snap
---
source: crates/sparrow-logical/src/expr.rs
expression: literal
---
Expr {
    name: "literal",
    literal_args: [
        String(
            "hello",
        ),
    ],
    args: [],
    result_type: Utf8,
    grouping: Literal,
}
